--- a/index.html
+++ b/index.html
@@ -6,11 +6,31 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>NOVAJATA S.A.C. - Líder en Minería Responsable en Madre de Dios</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+		 <!-- Фавикон -->
+			<link rel="icon" href="images/logo.png" type="image/png">
+			<link rel="apple-touch-icon" href="images/logo.png">
+			
+			<!-- Основные метатеги (испанская версия) -->
+			
+			<meta name="description" content="Expertos en extracción mineral con tecnología moderna. Operaciones mineras responsables en Madre de Dios desde 2025. Cumplimiento ambiental garantizado.">
+			<meta name="keywords" content="minería Perú, extracción mineral Madre de Dios, minería responsable, NOVAJATA S.A.C., minería sostenible">
+
+		<!-- Альтернативные метатеги (английская версия) -->
+			<link rel="alternate" hreflang="en" href="https://tudominio.com/en">
+			<meta name="description" lang="en" content="Mining experts in Peru since 2025. Responsible mineral extraction in Madre de Dios with modern technology and environmental compliance.">
+
+		<!-- Дополнительные метатеги -->
+			<meta name="author" content="NOVAJATA S.A.C.">
+			<meta name="robots" content="index, follow">
+			<meta name="geo.region" content="PE-MDD">
+			<meta name="geo.placename" content="Madre de Dios">
+
 	</head>
 	<body class="is-preload">
 
@@ -89,7 +109,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy;Arequipa, Peru. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
