--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>NOVAJATA S.A.C. - Empresa minera</title>
+		<title>INCAJATA S.A.C. - Empresa minera</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -26,7 +26,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>NOVAJATA S.A.C.</h1>
+				<h1>INCAJATA S.A.C.</h1>
 				<p>
 					Es una empresa minera especializada en la <strong>extracción, procesamiento y comercialización de minerales.</strong> Integramos tecnología de vanguardia, experiencia consolidada y un enfoque sostenible en la explotación de yacimientos. 
 					<br>
@@ -41,7 +41,7 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="copyright">
-					<li>&copy; NOVAJATA S.A.C.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; INCAJATA S.A.C.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</footer>
 
