--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 		<link rel="apple-touch-icon" href="images/logo.png">
 
 		<meta name="description" content="Expertos en extracción mineral con tecnología moderna. Operaciones mineras responsables en Madre de Dios desde 2025. Cumplimiento ambiental garantizado.">
-		<meta name="keywords" content="minería Perú, extracción mineral Madre de Dios, minería responsable, NOVAJATA S.A.C., minería sostenible">
+		<meta name="keywords" content="minería Perú, extracción mineral Madre de Dios, minería responsable, INCAJATA S.A.C., minería sostenible">
 
-		<meta name="author" content="NOVAJATA S.A.C.">
+		<meta name="author" content="INCAJATA S.A.C.">
 		<meta name="robots" content="index, follow">
 		<meta name="geo.region" content="PE-MDD">
 		<meta name="geo.placename" content="Madre de Dios">
@@ -35,7 +35,7 @@
 			</header>
 
 			<p>
-				<b>Email:</b> <a href="mailto:novajata.oficina@gmail.com">novajata.oficina@gmail.com</a>
+				<b>Email:</b> <a href="mailto:incajata@gmail.com">incajata@gmail.com</a>
 			</p>
 
 		<!-- Footer -->
