--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
 		<meta name="geo.placename" content="Madre de Dios">
 	</head>
 	<body class="is-preload">
-
+		<style>
+        #goldPrice {
+            font-size: 18px;
+            font-weight: bold;
+            margin: 20px;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+    	</style>
 		<!-- Header -->
 			<header id="header">
 				<h1>INCAJATA S.A.C.</h1>
@@ -31,6 +40,9 @@
 					Es una empresa minera especializada en la <strong>extracción, procesamiento y comercialización de minerales.</strong> Integramos tecnología de vanguardia, experiencia consolidada y un enfoque sostenible en la explotación de yacimientos. 
 					<br>
 					Nuestra misión es <strong>optimizar los recursos naturales con seguridad y eficiencia</strong>, contribuyendo al crecimiento económico sostenible.
+					<div id="goldPrice">Cargando el precio ...
+
+					</div>
 				</p>
 			</header>
 
@@ -47,6 +59,8 @@
 
 		<!-- Scripts -->
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/gold_price.js"></script>
 
 	</body>
+	
 </html>
