--- a/index.html
+++ b/index.html
@@ -5,62 +5,112 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>INCAJATA S.A.C. - Empresa minera</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
 
-		<link rel="icon" href="images/logo.png" type="image/png">
-		<link rel="apple-touch-icon" href="images/logo.png">
+<head>
+	<title>INCAJATA S.A.C. - Empresa minera</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
 
-		<meta name="description" content="Expertos en extracción mineral con tecnología moderna. Operaciones mineras responsables en Madre de Dios desde 2025. Cumplimiento ambiental garantizado.">
-		<meta name="keywords" content="minería Perú, extracción mineral Madre de Dios, minería responsable, INCAJATA S.A.C., minería sostenible">
+	<link rel="icon" href="images/logo.png" type="image/png">
+	<link rel="apple-touch-icon" href="images/logo.png">
+	<!-- Bootstrap Icons -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
-		<meta name="author" content="INCAJATA S.A.C.">
-		<meta name="robots" content="index, follow">
-		<meta name="geo.region" content="PE-MDD">
-		<meta name="geo.placename" content="Madre de Dios">
-	</head>
-	<body class="is-preload">
-		<style>
-        #goldPrice {
-            font-size: 18px;
-            font-weight: bold;
-            margin: 20px;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-    	</style>
-		<!-- Header -->
-			<header id="header">
-				<h1>INCAJATA S.A.C.</h1>
-				<p>
-					Es una empresa minera especializada en la <strong>extracción, procesamiento y comercialización de minerales.</strong> Integramos tecnología de vanguardia, experiencia consolidada y un enfoque sostenible en la explotación de yacimientos. 
-					<br>
-					Nuestra misión es <strong>optimizar los recursos naturales con seguridad y eficiencia</strong>, contribuyendo al crecimiento económico sostenible.
-					<div id="goldPrice">Cargando el precio ...
+	<meta name="description"
+		content="Expertos en extracción mineral con tecnología moderna. Operaciones mineras responsables en Madre de Dios desde 2025. Cumplimiento ambiental garantizado.">
+	<meta name="keywords"
+		content="minería Perú, extracción mineral Madre de Dios, minería responsable, INCAJATA S.A.C., minería sostenible">
 
-					</div>
+	<meta name="author" content="INCAJATA S.A.C.">
+	<meta name="robots" content="index, follow">
+	<meta name="geo.region" content="PE-MDD">
+	<meta name="geo.placename" content="Madre de Dios">
+</head>
+
+<body class="is-preload">
+	<style>
+		#goldPrice {
+			font-size: 18px;
+			font-weight: bold;
+			margin: 20px;
+			padding: 10px;
+			border: 1px solid #ddd;
+			border-radius: 5px;
+		}
+	</style>
+	<!-- Header -->
+	<header id="header">
+		<h1>INCAJATA S.A.C.</h1>
+		<div class="container my-5">
+			<div class="card shadow rounded-4 p-4">
+				<h3 class="card-title text-center text-primary mb-4">¿Quiénes somos?</h3>
+				<p class="fs-5 mb-3">
+					<strong>Somos una empresa minera</strong> especializada en la <strong>extracción, procesamiento y
+						comercialización de minerales.</strong> Integramos tecnología de vanguardia, experiencia
+					consolidada y un enfoque sostenible en la explotación de yacimientos.
 				</p>
-			</header>
+				<p class="fs-5 text-secondary">
+					<strong>Misión:</strong> Optimizar los recursos naturales con seguridad y eficiencia, contribuyendo
+					al crecimiento económico sostenible.
+				</p>
 
-			<p>
-				<b>Email:</b> <a href="mailto:incajata@gmail.com">incajata@gmail.com</a>
-			</p>
+				<h3 class="card-title text-center text-primary mb-4">Nuestro equipo:</h3>
+				<p class="fs-5">
+					Contamos con un equipo multidisciplinario de profesionales altamente calificados, con experiencia en
+					minería, geología, ingeniería, seguridad industrial y gestión ambiental.
+					Nuestro talento humano es el motor que impulsa nuestros proyectos con eficiencia, innovación y
+					compromiso.
+				</p>
+				<div class="card text-center shadow rounded-4 p-4">
+					<h3 class="card-title text-center text-primary mb-4">Info (adicional):</h3>
+					<div id="goldPrice" class="fs-4 text-secondary">Cargando...</div>
+				</div>
+			</div>
+		</div>
+	</header>
 
-		<!-- Footer -->
-			<footer id="footer">
-				<ul class="copyright">
-					<li>&copy; INCAJATA S.A.C.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+	<hr>
+
+	<div class="container my-4">
+		<div class="card shadow rounded-4">
+			<div class="card-body">
+				<h3 class="card-title text-center text-primary mb-4">Contactos:</h3>
+				<ul class="list-unstyled fs-5">
+					<li class="mb-3">
+						<i class="bi bi-envelope-fill me-2 text-danger"></i>
+						<strong>Email:</strong>
+						<a href="mailto:incajata@gmail.com" class="text-decoration-none">incajata@gmail.com</a>
+					</li>
+					<li class="mb-3">
+						<i class="bi bi-whatsapp me-2 text-success"></i>
+						<strong>WhatsApp:</strong>
+						<a href="https://wa.me/51963299237" class="text-decoration-none">+51 963 299 237</a>
+					</li>
+					<li>
+						<i class="bi bi-geo-alt-fill me-2 text-primary"></i>
+						<strong>Ubicación:</strong>
+						Arequipa, Perú.
+						<!-- <br>
+						Puerto Maldonado, Madre de Dios. -->
+					</li>
 				</ul>
-			</footer>
+			</div>
+		</div>
+	</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/main.js"></script>
-			<script src="assets/js/gold_price.js"></script>
+	<!-- Footer -->
+	<footer id="footer">
+		<ul class="copyright">
+			<li>&copy; INCAJATA S.A.C.</li>
+			<li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+		</ul>
+	</footer>
 
-	</body>
-	
+	<!-- Scripts -->
+	<script src="assets/js/main.js"></script>
+	<script src="assets/js/gold_price.js"></script>
+
+</body>
+
 </html>
