--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>INCAJATA S.A.C. - Empresa minera</title>
+	<title>INCAJATA S.A.C. — Consultoría y Proyectos Técnicos para Minería</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,15 +17,14 @@
 	<!-- Bootstrap Icons -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
-	<meta name="description"
-		content="Expertos en extracción mineral con tecnología moderna. Operaciones mineras responsables en Madre de Dios desde 2025. Cumplimiento ambiental garantizado.">
-	<meta name="keywords"
-		content="minería Perú, extracción mineral Madre de Dios, minería responsable, INCAJATA S.A.C., minería sostenible">
+	<meta name="description" content="INCAJATA S.A.C. brinda consultoría técnica, desarrollo de proyectos y soporte documentario para empresas del sector minero y productivo.">
+	<meta name="keywords" content="consultoría minera, soporte técnico, proyectos mineros, certificación minera, INCAJATA, automatización documental, minería moderna, ingeniería, Perú">
 
 	<meta name="author" content="INCAJATA S.A.C.">
 	<meta name="robots" content="index, follow">
-	<meta name="geo.region" content="PE-MDD">
-	<meta name="geo.placename" content="Madre de Dios">
+	<meta name="geo.region" content="PE-ARE">
+	<meta name="geo.placename" content="Arequipa">
+
 </head>
 
 <body class="is-preload">
@@ -41,27 +40,77 @@
 	</style>
 	<!-- Header -->
 	<header id="header">
-		<h1>INCAJATA S.A.C.</h1>
+		<div style="display: flex; align-items: center; white-space: nowrap;">
+			<img src="images/logo.png" alt="Logo INCAJATA" width="90" height="90" style="margin-right: 10px;">
+			<h1 style="margin: 0; font-size: 3.5rem;">INCAJATA S.A.C.</h1>
+		</div>
+
+
+		<hr>
 		<div class="container my-5">
 			<div class="card shadow rounded-4 p-4">
 				<h3 class="card-title text-center text-primary mb-4">¿Quiénes somos?</h3>
 				<p class="fs-5 mb-3">
-					<strong>Somos una empresa minera</strong> especializada en la <strong>extracción, procesamiento y
-						comercialización de minerales.</strong> Integramos tecnología de vanguardia, experiencia
-					consolidada y un enfoque sostenible en la explotación de yacimientos.
+					INCAJATA S.A.C. es una empresa consultora y técnica que brinda soluciones integrales para el sector minero y productivo. Nos especializamos en la automatización documental, gestión de cumplimiento, desarrollo de proyectos técnicos y soporte operativo para empresas extractivas e industriales. Combinamos experiencia multidisciplinaria, tecnología aplicada y un enfoque orientado a la eficiencia, sostenibilidad y resultados medibles.
 				</p>
 				<p class="fs-5 text-secondary">
-					<strong>Misión:</strong> Optimizar los recursos naturales con seguridad y eficiencia, contribuyendo
-					al crecimiento económico sostenible.
+					<strong>Misión:</strong> Optimizar procesos técnicos y documentarios en la industria minera y productiva, mediante soluciones innovadoras, seguras y alineadas con las normativas vigentes, contribuyendo al desarrollo sostenible de nuestros clientes y su entorno.
 				</p>
 
 				<h3 class="card-title text-center text-primary mb-4">Nuestro equipo:</h3>
 				<p class="fs-5">
-					Contamos con un equipo multidisciplinario de profesionales altamente calificados, con experiencia en
-					minería, geología, ingeniería, seguridad industrial y gestión ambiental.
-					Nuestro talento humano es el motor que impulsa nuestros proyectos con eficiencia, innovación y
-					compromiso.
+					Contamos con un equipo multidisciplinario de profesionales especializados en minería, ingeniería, seguridad industrial, sistemas de gestión, tecnología y normativas sectoriales. Nuestro capital humano es el eje de nuestros servicios: aportamos precisión técnica, eficiencia operativa y visión estratégica en cada solución que implementamos.
 				</p>
+				<hr>
+				<!-- Servicios principales -->
+				<h3 class="card-title text-center text-primary mt-5 mb-4">Servicios principales:</h3>
+				<div class="row">
+					<!-- Servicio 1 -->
+					<div class="col-md-4 mb-3">
+						<div class="card h-100 shadow-sm">
+							<div class="card-body">
+								<div class="d-flex align-items-center mb-3">
+									<h3 class="card-title mb-0">Consultoría y Proyectos</h3>
+								</div>
+								<p class="card-text">
+									Desarrollo de proyectos mineros, análisis de rentabilidad, documentación, diseño de esquemas tecnológicos y evaluación de procesos operativos.
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<!-- Servicio 2 -->
+					<div class="col-md-4 mb-3">
+						<div class="card h-100 shadow-sm">
+							<div class="card-body">
+								<div class="d-flex align-items-center mb-3">
+									<h3 class="card-title mb-0">Exploración y montaje técnico</h3>
+								</div>
+								<p class="card-text">
+									Exploración geológica, habilitación de zonas, instalación y configuración de equipos, pruebas piloto y puesta en marcha de operaciones.
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<!-- Servicio 3 -->
+					<div class="col-md-4 mb-3">
+						<div class="card h-100 shadow-sm">
+							<div class="card-body">
+								<div class="d-flex align-items-center mb-3">
+									<h3 class="card-title mb-0">Procesamiento</h3>
+								</div>
+								<p class="card-text">
+									 Mejora de recuperación, tratamiento de concentrados, fundición, eficiencia metalúrgica, venta y exportación de producto final.
+								</p>
+							</div>
+						</div>
+					</div>
+
+					
+				</div>
+				
+
 				<div class="card text-center shadow rounded-4 p-4">
 					<h3 class="card-title text-center text-primary mb-4">Info (adicional):</h3>
 					<div id="goldPrice" class="fs-4 text-secondary">Cargando...</div>
