--- a/index.html
+++ b/index.html
@@ -1,165 +1,31 @@
-<!DOCTYPE HTML>
-<!--
-	Eventually by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-
+<!DOCTYPE html>
+<html lang="es">
 <head>
-	<title>INCAJATA S.A.C. — Consultoría y Proyectos Técnicos para Minería</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-
-	<link rel="icon" href="images/logo.png" type="image/png">
-	<link rel="apple-touch-icon" href="images/logo.png">
-	<!-- Bootstrap Icons -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-
-	<meta name="description" content="INCAJATA S.A.C. brinda consultoría técnica, desarrollo de proyectos y soporte documentario para empresas del sector minero y productivo.">
-	<meta name="keywords" content="consultoría minera, soporte técnico, proyectos mineros, certificación minera, INCAJATA, automatización documental, minería moderna, ingeniería, Perú">
-
-	<meta name="author" content="INCAJATA S.A.C.">
-	<meta name="robots" content="index, follow">
-	<meta name="geo.region" content="PE-ARE">
-	<meta name="geo.placename" content="Arequipa">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Sitio Web Movido</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      height: 100vh;
+      background-color: #f8f9fa;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+    .card {
+      padding: 2rem;
+      border-radius: 1rem;
+      box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.1);
+    }
+  </style>
 </head>
-
-<body class="is-preload">
-	<style>
-		#goldPrice {
-			font-size: 18px;
-			font-weight: bold;
-			margin: 20px;
-			padding: 10px;
-			border: 1px solid #ddd;
-			border-radius: 5px;
-		}
-	</style>
-	<!-- Header -->
-	<header id="header">
-		<div style="display: flex; align-items: center; white-space: nowrap;">
-			<img src="images/logo.png" alt="Logo INCAJATA" width="90" height="90" style="margin-right: 10px;">
-			<h1 style="margin: 0; font-size: 3.5rem;">INCAJATA S.A.C.</h1>
-		</div>
-
-
-		<hr>
-		<div class="container my-5">
-			<div class="card shadow rounded-4 p-4">
-				<h3 class="card-title text-center text-primary mb-4">¿Quiénes somos?</h3>
-				<p class="fs-5 mb-3">
-					INCAJATA S.A.C. es una empresa consultora y técnica que brinda soluciones integrales para el sector minero y productivo. Nos especializamos en la automatización documental, gestión de cumplimiento, desarrollo de proyectos técnicos y soporte operativo para empresas extractivas e industriales. Combinamos experiencia multidisciplinaria, tecnología aplicada y un enfoque orientado a la eficiencia, sostenibilidad y resultados medibles.
-				</p>
-				<p class="fs-5 text-secondary">
-					<strong>Misión:</strong> Optimizar procesos técnicos y documentarios en la industria minera y productiva, mediante soluciones innovadoras, seguras y alineadas con las normativas vigentes, contribuyendo al desarrollo sostenible de nuestros clientes y su entorno.
-				</p>
-
-				<h3 class="card-title text-center text-primary mb-4">Nuestro equipo:</h3>
-				<p class="fs-5">
-					Contamos con un equipo multidisciplinario de profesionales especializados en minería, ingeniería, seguridad industrial, sistemas de gestión, tecnología y normativas sectoriales. Nuestro capital humano es el eje de nuestros servicios: aportamos precisión técnica, eficiencia operativa y visión estratégica en cada solución que implementamos.
-				</p>
-				<hr>
-				<!-- Servicios principales -->
-				<h3 class="card-title text-center text-primary mt-5 mb-4">Servicios principales:</h3>
-				<div class="row">
-					<!-- Servicio 1 -->
-					<div class="col-md-4 mb-3">
-						<div class="card h-100 shadow-sm">
-							<div class="card-body">
-								<div class="d-flex align-items-center mb-3">
-									<h3 class="card-title mb-0">Consultoría y Proyectos</h3>
-								</div>
-								<p class="card-text">
-									Desarrollo de proyectos mineros, análisis de rentabilidad, documentación, diseño de esquemas tecnológicos y evaluación de procesos operativos.
-								</p>
-							</div>
-						</div>
-					</div>
-
-					<!-- Servicio 2 -->
-					<div class="col-md-4 mb-3">
-						<div class="card h-100 shadow-sm">
-							<div class="card-body">
-								<div class="d-flex align-items-center mb-3">
-									<h3 class="card-title mb-0">Exploración y montaje técnico</h3>
-								</div>
-								<p class="card-text">
-									Exploración geológica, habilitación de zonas, instalación y configuración de equipos, pruebas piloto y puesta en marcha de operaciones.
-								</p>
-							</div>
-						</div>
-					</div>
-
-					<!-- Servicio 3 -->
-					<div class="col-md-4 mb-3">
-						<div class="card h-100 shadow-sm">
-							<div class="card-body">
-								<div class="d-flex align-items-center mb-3">
-									<h3 class="card-title mb-0">Procesamiento</h3>
-								</div>
-								<p class="card-text">
-									 Mejora de recuperación, tratamiento de concentrados, fundición, eficiencia metalúrgica, venta y exportación de producto final.
-								</p>
-							</div>
-						</div>
-					</div>
-
-					
-				</div>
-				
-
-				<div class="card text-center shadow rounded-4 p-4">
-					<h3 class="card-title text-center text-primary mb-4">Info (adicional):</h3>
-					<div id="goldPrice" class="fs-4 text-secondary">Cargando...</div>
-				</div>
-			</div>
-		</div>
-	</header>
-
-	<hr>
-
-	<div class="container my-4">
-		<div class="card shadow rounded-4">
-			<div class="card-body">
-				<h3 class="card-title text-center text-primary mb-4">Contactos:</h3>
-				<ul class="list-unstyled fs-5">
-					<li class="mb-3">
-						<i class="bi bi-envelope-fill me-2 text-danger"></i>
-						<strong>Email:</strong>
-						<a href="mailto:incajata@gmail.com" class="text-decoration-none">incajata@gmail.com</a>
-					</li>
-					<li class="mb-3">
-						<i class="bi bi-whatsapp me-2 text-success"></i>
-						<strong>WhatsApp:</strong>
-						<a href="https://wa.me/51963299237" class="text-decoration-none">+51 963 299 237</a>
-					</li>
-					<li>
-						<i class="bi bi-geo-alt-fill me-2 text-primary"></i>
-						<strong>Ubicación:</strong>
-						Arequipa, Perú.
-						<!-- <br>
-						Puerto Maldonado, Madre de Dios. -->
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-
-	<!-- Footer -->
-	<footer id="footer">
-		<ul class="copyright">
-			<li>&copy; INCAJATA S.A.C.</li>
-			<li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
-		</ul>
-	</footer>
-
-	<!-- Scripts -->
-	<script src="assets/js/main.js"></script>
-	<script src="assets/js/gold_price.js"></script>
-
+<body>
+  <div class="card">
+    <h1 class="mb-4">¡Nos hemos mudado!</h1>
+    <p class="lead">Ahora puedes visitarnos en nuestro nuevo sitio web:</p>
+    <a href="https://incajata.org.pe" class="btn btn-primary mt-3" target="_blank">www.incajata.org.pe</a>
+  </div>
 </body>
-
 </html>
