--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 </head>
 <body>
   <div class="card">
+    <h3 class="mb-1">INCAJATA S.A.C.</h3>
     <h1 class="mb-4">¡Nos hemos mudado!</h1>
     <p class="lead">Ahora puedes visitarnos en nuestro nuevo sitio web:</p>
-    <a href="https://incajata.org.pe" class="btn btn-primary mt-3" target="_blank">www.incajata.org.pe</a>
+    <a href="https://incajata.org.pe" class="btn btn-primary mt-3">www.incajata.org.pe</a>
   </div>
 </body>
 </html>
